fix(styling): tweak some styling to fix layout issues

--- a/src/assets/styles/_lines.scss
+++ b/src/assets/styles/_lines.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-attachment: fixed;
 }
 #svgLinesContainerOverlay {
   position: absolute;
