--- a/src/assets/styles/_scaffold.scss
+++ b/src/assets/styles/_scaffold.scss
@@ -64,6 +64,8 @@ body {
     }
 
     .page-title-container__subtitles {
+      display: block;
+      width: 100%;
       background: rgba(33, 37, 41, 0.75);
       padding: 15px;
       > p {
