--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,6 +31,7 @@ html {
   *:after {
     box-sizing: border-box;
   }
+  scroll-behavior: smooth;
 }
 
 .hidden {
